--- a/styles/larger.css
+++ b/styles/larger.css
@@ -3,7 +3,15 @@
         max-width: 2000px;
     }
 
-    nav ul{
+    nav{
+        padding: 0;
+    }
+
+    #menu{
+        display: none;
+    }
+
+    #navigation{
         display: flex;
         justify-content: space-evenly;
         margin: 0;
