Fix homepage errors

--- a/chamber/styles/base.css
+++ b/chamber/styles/base.css
@@ -11,7 +11,7 @@ header{
     align-items: center;
 }
 
-header h2{
+h1{
     font-family: 'Charm', cursive;
     font-size: 1.5rem;
     padding-left: 1rem;
