--- a/styles/larger.css
+++ b/styles/larger.css
@@ -1,6 +1,6 @@
 @media screen and (min-width:500px) {
     body{
-        max-width: 2000px;
+        max-width: 1000px;
     }
 
     nav{
@@ -23,6 +23,10 @@
 
     h1 {
         grid-column: 1/3;
+    }
+
+    .hero{
+        grid-column: 1 / 3;
     }
 
     br{
