--- a/chamber/styles/larger.css
+++ b/chamber/styles/larger.css
@@ -1,6 +1,10 @@
-@media screen and (min-width: 600px){
+@media screen and (min-width: 500px){
     body{
         max-width: 2500px;
+    }
+
+    header .social{
+        flex-direction: row;
     }
 
     nav{
@@ -27,35 +31,67 @@
 
     .hero{
         grid-column: 1/3;
-        object-fit: cover;
-    }
-
-    #action{
-        position: absolute;
     }
 
     #spotlight{
         grid-column: 1/3;
-        display: flex;
-        justify-content: space-evenly;
-        flex-wrap: wrap;
+        display: grid;
+        grid-template-columns: 1fr 1fr 1fr;
     }
 
     #spotlight h2{
-        flex-basis: 100%;
+        grid-column: 1 / 4;
     }
 
     footer{
-        display: flex;
-        justify-content: space-evenly;
-        flex-wrap: wrap;
+        display: grid;
+       grid-template-columns: 1fr 2fr 1fr;
+       align-items: center;
+    }
+
+    .logo{
+        grid-column: 1 / 2;
+        grid-row: 1 / 3;
+    }
+
+    footer h2{
+        grid-column: 2 / 3;
+        grid-row: 1 / 2;
+    }
+
+    footer .contact{
+        grid-column: 3 / 4;
+        grid-row: 1 / 3;
+    }
+
+    footer .social{
+        grid-column: 2 / 3;
+        grid-row: 2 / 3;
     }
 
     .copyright{
-        flex-basis: 100%;
+        grid-column: 1 / 4;
+        text-align: center;
     }
 
     .copyright br{
         display: none;
+    }
+
+    #discover{
+        grid-template-columns: 33% 1fr;
+    }
+    
+    .aside{
+        grid-column: 1 / 2;
+    }    
+
+    .gallery{
+        grid-column: 2 / 3;
+        grid-row: 1 / 6;
+    }
+
+    .gallery img:hover{
+        box-shadow: 0 0 50px #333;
     }
 }
