Fix final errors

--- a/styles/base.css
+++ b/styles/base.css
@@ -202,5 +202,12 @@ footer img{
     padding: 0;
 }
 
+#learning a::after{
+    content: " | ";
+}
+
+#learning a:last-child::after{
+    content: "";
+}
 
 
