--- a/chamber/styles/base.css
+++ b/chamber/styles/base.css
@@ -226,7 +226,7 @@ footer h2{
     font-size: 1.25rem;
     padding: 0;
     border: none;
-    margin: 3rem 0 0 0;
+    margin: 1rem 0 0;
 }
 
 .form input, .form textarea{
