--- a/chamber/styles/larger.css
+++ b/chamber/styles/larger.css
@@ -102,4 +102,81 @@
     .thanks{
         display: block;
     }
+
+    #directory{
+        grid-template-columns: 1fr 1fr 1fr;
+    }
+
+    #directory > h2{
+        grid-column: 1/4;
+    }
+
+    #directory .bronze{
+        grid-row: 5/6;
+    }
+
+    #directory > div{
+        grid-column: 1/4;
+        background-color: #f1f3fc;
+        border: none;
+        display: flex;
+        justify-content: center;
+    }
+    
+    #directory button{
+        margin: 10px;
+        font-family: 'Manjari', sans-serif;
+        font-size: 1.25rem;
+        padding: .75rem;
+        color: #f1f3fc;
+        background-color: #391126;
+    }
+
+    #directory.list{
+        display: block;
+    }
+
+    #directory.list section{
+        display: grid;
+        grid-template-columns: 1fr 1fr 1fr;
+        grid-template-rows: 1fr 1fr 1fr;
+        gap: .5rem;
+        align-items: center;
+        justify-items: center;
+    }
+
+    #directory.list a{
+        grid-column: 3/4;
+        text-align: left;
+    }
+
+    #directory.list img{
+        grid-row: 2/4;
+        grid-column: 1/2;
+    }
+
+    #directory.list p:first-of-type{
+        grid-row: 1/4;
+    }
+
+    #directory.list br{
+        display: none;
+    }
+
+    #directory.list .bronze{
+        grid-template-rows: 1fr 1fr;
+    }
+
+    #directory.list .bronze h2{
+        grid-column: 1/2;
+    }
+
+    #directory.list .bronze p:first-of-type{
+        grid-row: 1/3;
+        grid-column: 2/3;
+    }
+
+    #directory.list .bronze p:last-child{
+        grid-column: 3/4;
+    }
 }
