--- a/chamber/styles/base.css
+++ b/chamber/styles/base.css
@@ -130,6 +130,14 @@ h2{
     text-align: center;
 }
 
+#spotlight a{
+    font-family: 'Manjari', sans-serif;
+    font-size: 1.25rem;
+    padding: 2px;
+    text-align: center;
+    color: black;
+}
+
 h3{
     font-family: 'Sahitya', serif;
     font-size: 1.5rem;
@@ -186,7 +194,7 @@ footer h2{
 }
 
 .logo{
-    width: 100px;
+    width: 10rem;
 }
 
 .gallery img{
@@ -318,5 +326,58 @@ footer h2{
     width: auto;
     margin: 0 auto;
     display: block;
+}
+
+#weather{
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-rows: 3rem 1fr 1fr;
+    gap: .5rem;
+    text-align: center;
+}
+
+#weather h2{
+    grid-column: 1 / 4;
+}
+
+#weather section{
+    margin: 0;
+    display: flex;
+    flex-direction: column;
+    padding: 0;
+}
+
+#weather section:nth-child(2){
+    grid-column: 1 / 4;
+}
+
+#weather img{
+    display: block;
+    width: 50%;
+    height: auto;
+    margin: 0 auto;
+    padding: 0;
+}
+
+#banner{
+    position: sticky;
+    grid-column: 1 / 3;
+    top: 0;
+}
+
+#banner h3{
+    text-align: center;
+}
+
+.closed{
+    display: none;
+}
+
+#closeBanner{
+    font-size: 1.5rem;
+    position: relative;
+    left: 90%;
+    background-color: #85b581;
+    border: none;
 }
 
